--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "date-fns": "^4.1.0",
+    "react-datepicker": "^8.7.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3"
   }
